AC_INIT([massivethreads], [0.21], [massivethreads@eidos.ic.i.u-tokyo.ac.jp], [massivethreads], [http://code.google.com/p/massivethreads/])
AM_INIT_AUTOMAKE([foreign -Wall -Werror])
# required when you build shared libraries, relying on libtool
AC_CONFIG_MACRO_DIR([m4])
AC_PROG_CC
AC_PROG_AWK
AM_PROG_AS
# initialize libtool
LT_INIT
AC_CONFIG_FILES([Makefile tests/Makefile tests/fib/Makefile])
AC_OUTPUT
